# warp

./: .gitignore  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs  tui_export.rs
app/src/ai/: conversation_details_panel.rs
app/src/ai/agent_management/: agent_management_model.rs  agent_management_model_tests.rs  view.rs
app/src/ai/mcp/: file_based_manager.rs  file_based_manager_tests.rs
app/src/local_control/: bridge.rs  handlers.rs  mod.rs  mod_tests.rs  permissions.rs  resolver.rs
app/src/local_control/handlers/: app_state.rs  blocks.rs
app/src/pane_group/pane/: mod.rs  terminal_pane.rs
app/src/server/server_api/: ai.rs
app/src/server/telemetry/: events.rs
app/src/settings/: ai.rs  init.rs  pane.rs  pane_tests.rs
app/src/settings_view/: appearance_page.rs  features_page.rs  mod.rs
app/src/terminal/: activity_status.rs  activity_status_tests.rs  cli_agent.rs  cli_agent_tests.rs  grid_renderer_tests.rs  input.rs  mod.rs  view.rs  view_tests.rs
app/src/terminal/cli_agent_sessions/: mod.rs  mod_tests.rs
app/src/test_util/: settings.rs
crates/local_control/src/: catalog.rs  protocol.rs  protocol_tests.rs
crates/warp_cli/src/: agent.rs  local_control_tests.rs
crates/warp_core/src/: paths.rs  paths_tests.rs
crates/warp_features/src/: lib.rs
crates/warp_mcp_server/: Cargo.toml
crates/warp_mcp_server/src/: lib.rs
crates/warp_tui/src/: lib.rs  tui_builder.rs
crates/warpui/: Cargo.toml
script/: Local-Production-Entitlements.plist  bootstrap  run
script/macos/: bundle  run
script/windows/: bootstrap.ps1
(+23 files in other folders)
