[package]
name = "warp_mcp_server"
edition = "2024"
description = "Built-in MCP server for controlling a local Warp app"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
local_control.workspace = true
rmcp = { workspace = true, features = ["server", "transport-io"] }
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
warp_core.workspace = true
